<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/play_pozadina"
    tools:context=".ActivitySredina.PlayActivity">

    <Button
        android:id="@+id/button_RSABF"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/dugme_pozadina2"
        android:onClick="rsabf"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:text="@string/RSABF"
        android:textColor="@color/tekst"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/dugme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_frekvencijska"
        app:layout_constraintVertical_bias="0.089"
        tools:text="@string/RSABF" />

    <Button
        android:id="@+id/button_frekvencijska"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/dugme_pozadina2"
        android:onClick="frekvencijskaAnaliza"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:text="@string/frequencyAnalysis"
        android:textColor="@color/tekst"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/dugme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_rsa"
        app:layout_constraintVertical_bias="0.449"
        tools:text="@string/frequencyAnalysis" />

    <Button
        android:id="@+id/button_BACK4"
        android:layout_width="50dp"
        app:backgroundTint="@color/dugme_sporedno_back"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dugme_pozadina3"
        android:onClick="back"
        android:text="@string/BACK"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="UsingOnClickInXml"
        tools:text="@string/BACK" />

    <Button
        android:id="@+id/button_enigma"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dugme_pozadina4"
        android:onClick="enigma"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:text="@string/ENIGMA"
        android:textColor="@color/zamjena_tekst"
        android:textSize="18dp"
        android:textStyle="bold"
        app:backgroundTint="@color/dugme2"
        app:layout_constraintBottom_toTopOf="@+id/button_rsa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/ENIGMA" />

    <Button
        android:id="@+id/button_rsa"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="348dp"
        android:background="@drawable/dugme_pozadina4"
        android:onClick="rsa"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:text="@string/RSA"
        android:textColor="@color/zamjena_tekst"
        android:textSize="18dp"
        android:textStyle="bold"
        app:backgroundTint="@color/dugme2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="@string/RSA" />

    <Button
        android:id="@+id/button_vigenereova"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dugme_pozadina4"
        android:onClick="vigenereova"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:text="@string/Vigenerecipher"
        android:textColor="@color/zamjena_tekst"
        android:textSize="18dp"
        android:textStyle="bold"
        app:backgroundTint="@color/dugme2"
        app:layout_constraintBottom_toTopOf="@+id/button_enigma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/Vigenerecipher" />

    <Button
        android:id="@+id/button_supstitucijska"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dugme_pozadina4"
        android:onClick="supstitucijska"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:text="@string/SubstitutionCipher"
        android:textColor="@color/zamjena_tekst"
        android:textSize="18dp"
        android:textStyle="bold"
        app:backgroundTint="@color/dugme2"
        app:layout_constraintBottom_toTopOf="@+id/button_vigenereova"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/SubstitutionCipher" />

    <Button
        android:id="@+id/button_caesar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dugme_pozadina4"
        android:onClick="caesar"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:text="@string/Caesar"
        android:textColor="@color/zamjena_tekst"
        android:textSize="18dp"
        android:textStyle="bold"
        app:backgroundTint="@color/dugme2"
        app:layout_constraintBottom_toTopOf="@+id/button_supstitucijska"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/Caesar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:text="@string/MENU"
        android:textAlignment="center"
        android:textColor="@color/naslov"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>