<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/english"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_pozadina"
    tools:context=".ActivityPocetak.SettingsActivity">

    <View
        android:id="@+id/divider5"
        android:layout_width="391dp"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/naslov"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/english_textview" />

    <Switch
        android:id="@+id/switch_DarkMode2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/lato"
        android:text="@string/DARK_MODE"
        android:textAlignment="viewStart"
        android:textColor="#070707"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        app:layout_constraintVertical_bias="0.122"
        tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml"
        tools:text="@string/DARK_MODE" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="154dp"
        android:layout_height="43dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:text="@string/video"
        android:textColor="@color/naslov"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/video" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="154dp"
        android:layout_height="43dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/language"
        android:textColor="@color/naslov"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        tools:text="@string/language" />

    <View
        android:id="@+id/divider3"
        android:layout_width="391dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/naslov"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/font_size"
        android:textColor="@color/tekst"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="158dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:text="@string/background"
        android:textColor="@color/tekst"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <View
        android:id="@+id/divider"
        android:layout_width="391dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/naslov"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <View
        android:id="@+id/divider2"
        android:layout_width="391dp"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/naslov"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_DarkMode2" />

    <TextView
        android:id="@+id/croatian_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/CRO"
        android:textColor="@color/tekst_u_sjeni"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        tools:text="@string/CRO" />

    <TextView
        android:id="@+id/english_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/ENG"
        android:textColor="@color/neon_zelena"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/croatian_textView"
        app:layout_constraintTop_toBottomOf="@+id/croatian_textView"
        tools:text="@string/ENG" />

    <View
        android:id="@+id/divider4"
        android:layout_width="391dp"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        app:backgroundTint="@color/dugme_sporedno"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dugme_pozadina2"
        android:text="@string/HELP"
        android:textColor="@color/tekst"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dugme_pozadina2"
        android:text="@string/promjeni_jezik"
        android:textColor="@color/tekst"
        app:backgroundTint="@color/dugme_sporedno"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>