<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/main_pozadina"
    android:visibility="visible"
    tools:context=".ActivityPocetak.MainActivity">

    <Button
        android:id="@+id/button_INFO"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/dugme_pozadina1"
        android:fontFamily="@font/lato"
        android:onClick="info"
        android:text="@string/INFO"
        android:textColor="@color/tekst"
        android:textSize="22dp"
        android:textStyle="bold"
        app:backgroundTint="@color/dugme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_SETTINGS"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UsingOnClickInXml"
        tools:text="@string/INFO" />

    <Button
        android:id="@+id/button_PLAY"
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dugme_pozadina1"
        android:fontFamily="@font/lato"
        android:onClick="play"
        android:stateListAnimator="@anim/nav_default_enter_anim"
        android:text="@string/PLAY"
        android:textColor="@color/tekst"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/dugme"
        app:layout_constraintBottom_toTopOf="@+id/button_SETTINGS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_NASLOV"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="UsingOnClickInXml"
        tools:text="@string/PLAY" />

    <Button
        android:id="@+id/button_SETTINGS"
        android:layout_width="240dp"
        android:layout_height="75dp"
        android:background="@drawable/dugme_pozadina1"
        android:fontFamily="@font/lato"
        android:onClick="settings"
        android:text="@string/SETTINGS"
        android:textColor="@color/tekst"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/dugme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598"
        tools:ignore="UsingOnClickInXml"
        tools:text="@string/SETTINGS" />

    <Button
        android:id="@+id/button_EXIT"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dugme_pozadina1"
        android:fontFamily="@font/lato"
        android:onClick="exit"
        android:text="@string/EXIT"
        android:textColor="@color/tekst"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/dugme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_INFO"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UsingOnClickInXml"
        tools:text="@string/EXIT" />

    <TextView
        android:id="@+id/textView_NASLOV"
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:text="@string/naslov"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/naslov"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />

    <ImageView
        android:id="@+id/imageView_LOGO"
        android:layout_width="205dp"
        android:layout_height="199dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/logopng"
        android:src="@drawable/logopng"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_NASLOV" />

</androidx.constraintlayout.widget.ConstraintLayout>